# agentic-market-intelligence

./: .env.examples  README.md  pyproject.toml  report.md  report_open_source_self_driving_software.md
src/: app.py  crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: github_tool.py
