[project]
name = "agentic-market-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.100.0",
    "google-genai>=1.64.0",
    "groq>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "litellm[proxy]>=1.75.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.54.0",
]
